--- a/People.html
+++ b/People.html
@@ -101,9 +101,25 @@
         <div class="row align-items-center mb-5 content-BoxGCU gradStudentStyle">
             <div class="col-md-8 person-description">
                 <div class="row">
-                    <h2 class="customh1">Nombre alumno</h2>
-                    Info del alumno
-                    <hr>
+                    <div class="col-9">
+                        <h2 class="customh1">Nombre alumno</h2>
+                        Info del alumno
+                        <hr>
+                    </div>
+                    <div class="col-3">
+                        <div class="row">
+                            <div class="col-4 text-end p-0"><a href="#######INSERT STUDENT ARXIV HERE ########"><img
+                                        class="img-fluid studentSocialMediaLogo" src="./Media/ArXiv Icon.png"
+                                        alt="arxiv"></a>
+                            </div>
+                            <div class="col-4 text-end p-0"><a href="#######INSERT STUDENT TWITTER HERE ########"><img
+                                        class="img-fluid studentSocialMediaLogo" src="./Media/twitterLogo.png"
+                                        alt="twitter"></a> </div>
+                            <div class="col-4 text-end p-0"><a href="#######INSERT STUDENT GITHUB HERE ########"><img
+                                        class="img-fluid studentSocialMediaLogo" src="./Media/Github Icon.png"
+                                        alt="twitter"></a> </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-6"></div>
@@ -125,9 +141,25 @@
         <div class="row align-items-center mb-5 content-BoxGCU gradStudentStyle">
             <div class="col-md-8 person-description">
                 <div class="row">
-                    <h2 class="customh1">Nombre alumno</h2>
-                    Info del alumno
-                    <hr>
+                    <div class="col-9">
+                        <h2 class="customh1">Nombre alumno</h2>
+                        Info del alumno
+                        <hr>
+                    </div>
+                    <div class="col-3">
+                        <div class="row">
+                            <div class="col-4 text-end p-0"><a href="#######INSERT STUDENT ARXIV HERE ########"><img
+                                        class="img-fluid studentSocialMediaLogo" src="./Media/ArXiv Icon.png"
+                                        alt="arxiv"></a>
+                            </div>
+                            <div class="col-4 text-end p-0"><a href="#######INSERT STUDENT TWITTER HERE ########"><img
+                                        class="img-fluid studentSocialMediaLogo" src="./Media/twitterLogo.png"
+                                        alt="twitter"></a> </div>
+                            <div class="col-4 text-end p-0"><a href="#######INSERT STUDENT GITHUB HERE ########"><img
+                                        class="img-fluid studentSocialMediaLogo" src="./Media/Github Icon.png"
+                                        alt="twitter"></a> </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-6"></div>
@@ -187,7 +219,7 @@
             <div class="col-md-8 person-description">
                 (2024) Michael Tran, Undergraduate Thesis <br>
                 (2023) Manuel Drewhal, Visiting Student <br>
-                (2023) Simon Paiva, Visiting M.Sc Student <br>  
+                (2023) Simon Paiva, Visiting M.Sc Student <br>
                 <hr>
             </div>
         </div>
