--- a/External.html
+++ b/External.html
@@ -3,54 +3,92 @@
 
 <head>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <title>External</title>
+    <script src="https://d3js.org/d3.v6.min.js"></script>
+    <script src="https://d3js.org/topojson.v1.min.js"></script>
+    <style>
+        .country {
+            fill: #5b6871;
+            stroke: #8899a6;
+            stroke-width: 0.5px;
+        }
+
+        .country-Color {
+            fill: #8edee1;
+            stroke: #88c2c4;
+            stroke-width: 1px;
+        }
+
+        .country-Color:hover {
+            fill: #4ad043;
+        }
+
+        #mapPosition {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
+    <title>External Links</title>
 </head>
 
 <body>
-    <!-- Your website content goes here -->
-    <div class="background-image"
-        style="background-image: url('https://images.unsplash.com/photo-1644088379091-d574269d422f?q=80&w=3793&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')">
-    </div>
-    <div id="initContent"></div>
-    <script>
-        $(function () {
-            // Load the template.html file
-            $('#initContent').load('template.html');
-        });
+
+    <!-- ############### Insert NAVBAR with jQuery ############## -->
+    <div id="navbarJQ"></div>
 
 
-    </script>
+    <!-- ############### SECTION 1 ############## -->
+    <section class="container mb-1 content-BoxGCUExternal " style="background: #2b353e;">
+        <!-- GRAD STUDENT 1 -->
+        <div class="row align-items-center content-BoxGCUExternal">
+            <div class="col">
+                <h3 class="customh1_External">Conference for the AAS 2025</h3>
+            </div>
+        </div>
+        <div class="row align-items-center content-BoxGCUExternal">
+            <div class="col">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi omnis
+                magnam doloremque temporibus fugiat earum expedita maxime sit quisquam veritatis soluta nostrum qui
+                velit consectetur impedit esse laborum, iusto molestiae.
+                Cumque assumenda, aliquam quas voluptatum quis cum incidunt, commodi itaque labore repudiandae aut
+                atque sint quia aspernatur placeat possimus modi id nisi accusamus? Quos eveniet perferendis
+                consequatur quasi natus. Quisquam.
+            </div>
+        </div>
 
-    <!-- Custom content in this page -->
+    </section>
 
-    <div style="padding-top: 75vh;"></div>
-    
-    <section class="container mb-5 hidden content-BoxGCU">
+    <!-- ############### SECTION 1 ############## -->
+    <section class="container mb-1 content-BoxGCUExternal " style="background: #2b353e;">
+        <!-- GRAD STUDENT 1 -->
+        <div class="row align-items-center content-BoxGCUExternal">
+            <div class="col">
+                <h3 class="customh1_External">Congratulations to lorem ipsum for 400 papers</h3>
+            </div>
+        </div>
+        <div class="row align-items-center content-BoxGCUExternal">
+            <div class="col">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi omnis
+                magnam doloremque temporibus fugiat earum expedita maxime sit quisquam veritatis soluta nostrum qui
+                velit consectetur impedit esse laborum, iusto molestiae.
+                Cumque assumenda, aliquam quas voluptatum quis cum incidunt, commodi itaque labore repudiandae aut
+                atque sint quia aspernatur placeat possimus modi id nisi accusamus? Quos eveniet perferendis
+                consequatur quasi natus. Quisquam.
+            </div>
+        </div>
+
     </section>
 
 
 
-    <!-- FOOTER -->
+    <!-- ############### FOOTER ############## -->
     <div id="footerJQ"></div>
+
+    <!-- ################ SCRIPTS ################################### -->
     <script>
+        $("#navbarJQ").load("navbar.html");
         $("#footerJQ").load("footer.html");
     </script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <script defer src="app.js"></script>
+    <script src="appMap.js"></script>
 </body>
 
 </html>
