grid system people section

--- a/People.html
+++ b/People.html
@@ -91,7 +91,7 @@
     <section class="container mb-3 content-BoxGCU" style="background: #485155;">
         <div class="row align-items-center">
             <div class="col p-4" style="text-align: center;">
-                <h1 class="customh1 content-BoxGCU">Graduate Students</h1>
+                <h1 class="customh1 content-BoxGCU">Lab Members</h1>
             </div>
         </div>
 
