--- a/People.html
+++ b/People.html
@@ -105,27 +105,27 @@
                     <div class="row">
                         <div class="col">
                             <img class="img-fluid p-2"
-                                src="https://cdna.artstation.com/p/assets/images/images/076/302/562/large/uriel-garcilazo-cube-cut.jpg?1716668184"
+                                src="./Media/team_fotos/alex.jpg"    
                                 alt="">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
-                            <h2 class="customh1">Lorem ipsum</h2>
-                            <p>M.Sc. Student</p>
-                            <p>error_aliquid@gmail.com</p>
+                            <h2 class="customh1">Alexandre de Camargo</h2>
+                            <p>P.hD. Student</p>
+                            <p>decamara@mcmaster.ca</p>
                             <hr>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col text-end">
-                            <a href="#######INSERT STUDENT ARXIV HERE ########"><img
+                            <a href="https://arxiv.org/search/physics?searchtype=author&query=de+Camargo,+A"><img
                                     class="img-fluid studentSocialMediaLogo" src="./Media/ArXiv Icon.png"
                                     alt="arxiv"></a>
-                            <a href="#######INSERT STUDENT TWITTER HERE ########"><img
+                            <a href="https://x.com/Alegendree"><img
                                     class="img-fluid studentSocialMediaLogo" src="./Media/twitterLogo.png"
                                     alt="twitter"></a>
-                            <a href="#######INSERT STUDENT GITHUB HERE ########"><img
+                            <a href="https://github.com/AlexandreDeCamargo"><img
                                     class="img-fluid studentSocialMediaLogo" src="./Media/Github Icon.png"
                                     alt="twitter"></a>
                         </div>
@@ -137,15 +137,15 @@
                     <div class="row">
                         <div class="col">
                             <img class="img-fluid p-2"
-                                src="https://cdna.artstation.com/p/assets/images/images/076/302/562/large/uriel-garcilazo-cube-cut.jpg?1716668184"
+                                src="./Media/team_fotos/asma.png"
                                 alt="">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
-                            <h2 class="customh1">Lorem ipsum</h2>
+                            <h2 class="customh1">Asma J. Rafsanjani</h2>
                             <p>M.Sc. Student</p>
-                            <p>error_aliquid@gmail.com</p>
+                            <p>jamalira@mcmaster.ca</p>
                             <hr>
                         </div>
                     </div>
@@ -154,10 +154,10 @@
                             <a href="#######INSERT STUDENT ARXIV HERE ########"><img
                                     class="img-fluid studentSocialMediaLogo" src="./Media/ArXiv Icon.png"
                                     alt="arxiv"></a>
-                            <a href="#######INSERT STUDENT TWITTER HERE ########"><img
+                            <a href="https://x.com/Asma_J89"><img
                                     class="img-fluid studentSocialMediaLogo" src="./Media/twitterLogo.png"
                                     alt="twitter"></a>
-                            <a href="#######INSERT STUDENT GITHUB HERE ########"><img
+                            <a href="https://github.com/Asma-Jamali"><img
                                     class="img-fluid studentSocialMediaLogo" src="./Media/Github Icon.png"
                                     alt="twitter"></a>
                         </div>
