people grid, contact and molecule anim

--- a/Contact.html
+++ b/Contact.html
@@ -30,23 +30,22 @@
         $("#navbarJQ").load("navbar.html");
     </script>
 
-    <div style="padding-top: 50vh;"></div>
+    <div style="padding-top: 30vh;"></div>
 
     <!-- About section -->
     <section class="container mb-5">
         <div class="row">
-            <div class="col-md-6">
-                <div class="person-photo">
-                    <img src="./Media/ProfileV3.png" class="img-fluid" alt="Person Photo">
-                </div>
+            <div class="col-lg-6" style="font-size: 1.3em;">
+                In ChemAI-lab, we perform world-class research with people from all over the world. If you're interested
+                in joining the lab, please send us a message and your CV.
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="person-description">
                     <h2>Contact</h2>
                     <hr>
                     <p>Toronto, Ontario, Canada</p>
                     <p>
-                        <div class="" style="font-size: 2em; color: rgb(0, 96, 0);">YourEmail at gmail.com</div>
+                    <div class="" style="font-size: 2em; color: #f9b376;">ChemAI-lab@mcmaster.ca</div>
                     </p>
                 </div>
             </div>
