--- a/People.html
+++ b/People.html
@@ -96,20 +96,20 @@
         </div>
 
 
-        <section>
+        <section class="container-fluid content-BoxGCU">
             <!-- ROW 1 in the GRID -->
-            <div class="row align-items-center mb-5 content-BoxGCU ">
+            <div class="row align-items-center mb-5 ">
                 <!-- NEXT PERSON IN THE GRID -->
-                <div class="col-lg-4 col-sm-12">
+                <div class="col-lg-4 col-sm-12 text-center ">
                     <!-- DETAILS ON THE STUDENT ARE FOUND BELOW -->
                     <div class="row">
                         <div class="col">
-                            <img class="img-fluid p-2"
-                                src="./Media/team_fotos/alex.jpg"    
+                            <img class="img-fluid p-2 people-photo"
+                                src="./Media/team_fotos/alexV2.jpg"    
                                 alt="">
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row mt-3">
                         <div class="col">
                             <h2 class="customh1">Alexandre de Camargo</h2>
                             <p>P.hD. Student</p>
@@ -132,16 +132,16 @@
                     </div>
                 </div>
                 <!-- NEXT PERSON IN THE GRID -->
-                <div class="col-lg-4 col-sm-12">
+                <div class="col-lg-4 col-sm-12 text-center">
                     <!-- DETAILS ON THE STUDENT ARE FOUND BELOW -->
                     <div class="row">
                         <div class="col">
-                            <img class="img-fluid p-2"
+                            <img class="img-fluid p-2 people-photo"
                                 src="./Media/team_fotos/asma.png"
                                 alt="">
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row mt-3">
                         <div class="col">
                             <h2 class="customh1">Asma J. Rafsanjani</h2>
                             <p>M.Sc. Student</p>
@@ -164,16 +164,116 @@
                     </div>
                 </div>
                 <!-- NEXT PERSON IN THE GRID -->
-                <div class="col-lg-4 col-sm-12">
+                <div class="col-lg-4 col-sm-12 text-center">
                     <!-- DETAILS ON THE STUDENT ARE FOUND BELOW -->
                     <div class="row">
                         <div class="col">
-                            <img class="img-fluid p-2"
+                            <img class="img-fluid p-2 people-photo"
+                                src="./Media/team_fotos/jasmineV2.png"
+                                alt="">
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col">
+                            <h2 class="customh1">Jasmine</h2>
+                            <p>Student</p>
+                            <p>error_aliquid@gmail.com</p>
+                            <hr>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col text-end">
+                            <a href="#######INSERT STUDENT ARXIV HERE ########"><img
+                                    class="img-fluid studentSocialMediaLogo" src="./Media/ArXiv Icon.png"
+                                    alt="arxiv"></a>
+                            <a href="#######INSERT STUDENT TWITTER HERE ########"><img
+                                    class="img-fluid studentSocialMediaLogo" src="./Media/twitterLogo.png"
+                                    alt="twitter"></a>
+                            <a href="#######INSERT STUDENT GITHUB HERE ########"><img
+                                    class="img-fluid studentSocialMediaLogo" src="./Media/Github Icon.png"
+                                    alt="twitter"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- ROW 2 in the GRID -->
+            <div class="row align-items-center mb-5  ">
+                <!-- NEXT PERSON IN THE GRID -->
+                <div class="col-lg-4 col-sm-12 text-center">
+                    <!-- DETAILS ON THE STUDENT ARE FOUND BELOW -->
+                    <div class="row">
+                        <div class="col">
+                            <img class="img-fluid p-2 people-photo"
+                                src="./Media/team_fotos/rudraV2.png"
+                                alt="">
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col">
+                            <h2 class="customh1">Rudra</h2>
+                            <p>Student</p>
+                            <p>error_aliquid@gmail.com</p>
+                            <hr>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col text-end">
+                            <a href="#######INSERT STUDENT ARXIV HERE ########"><img
+                                    class="img-fluid studentSocialMediaLogo" src="./Media/ArXiv Icon.png"
+                                    alt="arxiv"></a>
+                            <a href="#######INSERT STUDENT TWITTER HERE ########"><img
+                                    class="img-fluid studentSocialMediaLogo" src="./Media/twitterLogo.png"
+                                    alt="twitter"></a>
+                            <a href="#######INSERT STUDENT GITHUB HERE ########"><img
+                                    class="img-fluid studentSocialMediaLogo" src="./Media/Github Icon.png"
+                                    alt="twitter"></a>
+                        </div>
+                    </div>
+                </div>
+                <!-- NEXT PERSON IN THE GRID -->
+                <div class="col-lg-4 col-sm-12 text-center">
+                    <!-- DETAILS ON THE STUDENT ARE FOUND BELOW -->
+                    <div class="row">
+                        <div class="col">
+                            <img class="img-fluid p-2 people-photo"
                                 src="https://cdna.artstation.com/p/assets/images/images/076/302/562/large/uriel-garcilazo-cube-cut.jpg?1716668184"
                                 alt="">
                         </div>
                     </div>
+                    <div class="row mt-3">
+                        <div class="col">
+                            <h2 class="customh1">Lorem ipsum</h2>
+                            <p>M.Sc. Student</p>
+                            <p>error_aliquid@gmail.com</p>
+                            <hr>
+                        </div>
+                    </div>
                     <div class="row">
+                        <div class="col text-end">
+                            <a href="#######INSERT STUDENT ARXIV HERE ########"><img
+                                    class="img-fluid studentSocialMediaLogo" src="./Media/ArXiv Icon.png"
+                                    alt="arxiv"></a>
+                            <a href="#######INSERT STUDENT TWITTER HERE ########"><img
+                                    class="img-fluid studentSocialMediaLogo" src="./Media/twitterLogo.png"
+                                    alt="twitter"></a>
+                            <a href="#######INSERT STUDENT GITHUB HERE ########"><img
+                                    class="img-fluid studentSocialMediaLogo" src="./Media/Github Icon.png"
+                                    alt="twitter"></a>
+                        </div>
+                    </div>
+                </div>
+                <!-- NEXT PERSON IN THE GRID -->
+                <div class="col-lg-4 col-sm-12 text-center">
+                    <!-- DETAILS ON THE STUDENT ARE FOUND BELOW -->
+                    <div class="row">
+                        <div class="col">
+                            <img class="img-fluid p-2 people-photo"
+                                src="https://cdna.artstation.com/p/assets/images/images/076/302/562/large/uriel-garcilazo-cube-cut.jpg?1716668184"
+                                alt="">
+                        </div>
+                    </div>
+                    <div class="row mt-3">
                         <div class="col">
                             <h2 class="customh1">Lorem ipsum</h2>
                             <p>M.Sc. Student</p>
@@ -198,118 +298,18 @@
             </div>
 
             <!-- ROW 2 in the GRID -->
-            <div class="row align-items-center mb-5 content-BoxGCU ">
+            <div class="row align-items-center mb-5  ">
                 <!-- NEXT PERSON IN THE GRID -->
-                <div class="col-lg-4 col-sm-12">
+                <div class="col-lg-4 col-sm-12 text-center">
                     <!-- DETAILS ON THE STUDENT ARE FOUND BELOW -->
                     <div class="row">
                         <div class="col">
-                            <img class="img-fluid p-2"
+                            <img class="img-fluid p-2 people-photo"
                                 src="https://cdna.artstation.com/p/assets/images/images/076/302/562/large/uriel-garcilazo-cube-cut.jpg?1716668184"
                                 alt="">
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col">
-                            <h2 class="customh1">Lorem ipsum</h2>
-                            <p>M.Sc. Student</p>
-                            <p>error_aliquid@gmail.com</p>
-                            <hr>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col text-end">
-                            <a href="#######INSERT STUDENT ARXIV HERE ########"><img
-                                    class="img-fluid studentSocialMediaLogo" src="./Media/ArXiv Icon.png"
-                                    alt="arxiv"></a>
-                            <a href="#######INSERT STUDENT TWITTER HERE ########"><img
-                                    class="img-fluid studentSocialMediaLogo" src="./Media/twitterLogo.png"
-                                    alt="twitter"></a>
-                            <a href="#######INSERT STUDENT GITHUB HERE ########"><img
-                                    class="img-fluid studentSocialMediaLogo" src="./Media/Github Icon.png"
-                                    alt="twitter"></a>
-                        </div>
-                    </div>
-                </div>
-                <!-- NEXT PERSON IN THE GRID -->
-                <div class="col-lg-4 col-sm-12">
-                    <!-- DETAILS ON THE STUDENT ARE FOUND BELOW -->
-                    <div class="row">
-                        <div class="col">
-                            <img class="img-fluid p-2"
-                                src="https://cdna.artstation.com/p/assets/images/images/076/302/562/large/uriel-garcilazo-cube-cut.jpg?1716668184"
-                                alt="">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <h2 class="customh1">Lorem ipsum</h2>
-                            <p>M.Sc. Student</p>
-                            <p>error_aliquid@gmail.com</p>
-                            <hr>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col text-end">
-                            <a href="#######INSERT STUDENT ARXIV HERE ########"><img
-                                    class="img-fluid studentSocialMediaLogo" src="./Media/ArXiv Icon.png"
-                                    alt="arxiv"></a>
-                            <a href="#######INSERT STUDENT TWITTER HERE ########"><img
-                                    class="img-fluid studentSocialMediaLogo" src="./Media/twitterLogo.png"
-                                    alt="twitter"></a>
-                            <a href="#######INSERT STUDENT GITHUB HERE ########"><img
-                                    class="img-fluid studentSocialMediaLogo" src="./Media/Github Icon.png"
-                                    alt="twitter"></a>
-                        </div>
-                    </div>
-                </div>
-                <!-- NEXT PERSON IN THE GRID -->
-                <div class="col-lg-4 col-sm-12">
-                    <!-- DETAILS ON THE STUDENT ARE FOUND BELOW -->
-                    <div class="row">
-                        <div class="col">
-                            <img class="img-fluid p-2"
-                                src="https://cdna.artstation.com/p/assets/images/images/076/302/562/large/uriel-garcilazo-cube-cut.jpg?1716668184"
-                                alt="">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <h2 class="customh1">Lorem ipsum</h2>
-                            <p>M.Sc. Student</p>
-                            <p>error_aliquid@gmail.com</p>
-                            <hr>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col text-end">
-                            <a href="#######INSERT STUDENT ARXIV HERE ########"><img
-                                    class="img-fluid studentSocialMediaLogo" src="./Media/ArXiv Icon.png"
-                                    alt="arxiv"></a>
-                            <a href="#######INSERT STUDENT TWITTER HERE ########"><img
-                                    class="img-fluid studentSocialMediaLogo" src="./Media/twitterLogo.png"
-                                    alt="twitter"></a>
-                            <a href="#######INSERT STUDENT GITHUB HERE ########"><img
-                                    class="img-fluid studentSocialMediaLogo" src="./Media/Github Icon.png"
-                                    alt="twitter"></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- ROW 2 in the GRID -->
-            <div class="row align-items-center mb-5 content-BoxGCU ">
-                <!-- NEXT PERSON IN THE GRID -->
-                <div class="col-lg-4 col-sm-12">
-                    <!-- DETAILS ON THE STUDENT ARE FOUND BELOW -->
-                    <div class="row">
-                        <div class="col">
-                            <img class="img-fluid p-2"
-                                src="https://cdna.artstation.com/p/assets/images/images/076/302/562/large/uriel-garcilazo-cube-cut.jpg?1716668184"
-                                alt="">
-                        </div>
-                    </div>
-                    <div class="row">
+                    <div class="row mt-3">
                         <div class="col">
                             <h2 class="customh1">Lorem ipsum</h2>
                             <p>Undergraduate Student</p>
@@ -332,16 +332,16 @@
                     </div>
                 </div>
                 <!-- NEXT PERSON IN THE GRID -->
-                <div class="col-lg-4 col-sm-12">
+                <div class="col-lg-4 col-sm-12 text-center">
                     <!-- DETAILS ON THE STUDENT ARE FOUND BELOW -->
                     <div class="row">
                         <div class="col">
-                            <img class="img-fluid p-2"
+                            <img class="img-fluid p-2 people-photo"
                                 src="https://cdna.artstation.com/p/assets/images/images/076/302/562/large/uriel-garcilazo-cube-cut.jpg?1716668184"
                                 alt="">
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row mt-3">
                         <div class="col">
                             <h2 class="customh1">Lorem ipsum</h2>
                             <p>Undergraduate Student</p>
@@ -364,16 +364,16 @@
                     </div>
                 </div>
                 <!-- NEXT PERSON IN THE GRID -->
-                <div class="col-lg-4 col-sm-12">
+                <div class="col-lg-4 col-sm-12 text-center">
                     <!-- DETAILS ON THE STUDENT ARE FOUND BELOW -->
                     <div class="row">
                         <div class="col">
-                            <img class="img-fluid p-2"
+                            <img class="img-fluid p-2 people-photo"
                                 src="https://cdna.artstation.com/p/assets/images/images/076/302/562/large/uriel-garcilazo-cube-cut.jpg?1716668184"
                                 alt="">
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row mt-3">
                         <div class="col">
                             <h2 class="customh1">Lorem ipsum</h2>
                             <p>Undergraduate Student</p>
@@ -400,7 +400,7 @@
         
 
     <!-- MAIN SECTION: UNDERGRAD STUDENTS -->
-    <!-- <section class="container mb-3 content-BoxGCU" style="background: #485155;">
+    <!-- <section class="container mb-3 " style="background: #485155;">
         <div class="row align-items-center">
             <div class="col p-4" style="text-align: center;">
                 <h1 class="customh1 content-BoxGCU">Undergraduate Students</h1>
