updated photo grid

--- a/People.html
+++ b/People.html
@@ -137,7 +137,7 @@
                     <div class="row">
                         <div class="col">
                             <img class="img-fluid p-2 people-photo"
-                                src="./Media/team_fotos/asma.png"
+                                src="./Media/team_fotos/asmaV2.png"
                                 alt="">
                         </div>
                     </div>
