--- a/navbar.html
+++ b/navbar.html
@@ -45,6 +45,9 @@
                 <li class="nav-item">
                     <a class="nav-link titleText" href="External.html">External Links</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link titleText" href="https://alexandredecamargo.github.io/Math4Chem/intro.html">Teaching</a>
+                </li>
 
             </ul>
         </div>
