student resources and links:

--- a/People.html
+++ b/People.html
@@ -146,12 +146,12 @@
                     </div>
                     <div class="row">
                         <div class="col text-end">
-                            <a href="#"><img
-                                    class="img-fluid studentSocialMediaLogo" src="./Media/ArXiv Icon.png"
-                                    alt="arxiv"></a>
+                            <a href="https://scholar.google.com/citations?user=bjQxG2gAAAAJ&hl=en"><img
+                                    class="img-fluid studentSocialMediaLogo" src="./Media/GoogleScholar Icon.png"
+                                    alt="GoogleScholar"></a>
                             <a href="https://x.com/ishume94"><img class="img-fluid studentSocialMediaLogo"
                                     src="./Media/twitterLogo.png" alt="twitter"></a>
-                            <a href="#"><img
+                            <a href="https://github.com/ishume94"><img
                                     class="img-fluid studentSocialMediaLogo" src="./Media/Github Icon.png"
                                     alt="twitter"></a>
                         </div>
