teaching and external links update

--- a/Teaching.html
+++ b/Teaching.html
@@ -41,25 +41,22 @@
         <!-- GRAD STUDENT 1 -->
         <div class="row align-items-center content-BoxGCUExternal">
             <div class="col">
-                <h3 class="customh1_External">
-                    <a class="customlink" style="color:#f9ea76" href="https://ml4physicalsciences.github.io/2023/files/NeurIPS_ML4PS_2023_94.pdf">
-                        NeurIPS 2023
+                <h3 class="customh1_External">Fall 2024</h3>
+                <hr>
+                <h3>
+                    <a class="customlink" style="color:#ffffff" href="https://chemai-lab.github.io/Math4Chem/intro.html">
+                        <u>CHEM 3PC3 - Mathematical Tools for Chemical Problems</u>
                     </a>
+                    
                 </h3>
-            </div>
-        </div>
-        <div class="row align-items-center content-BoxGCUExternal">
-            <div class="col">
-                Our paper, "Orbital-Free Density Functional Theory with Continuous Normalizing Flows", got accepted at
-                the Machine Learning and the Physical Sciences Workshop at NeurIPS 2023
             </div>
         </div>
 
     </section>
 
     
-
     <div style="height: 60vh;"></div>
+
 
     <!-- ############### FOOTER ############## -->
     <div id="footerJQ"></div>
