--- a/navbar.html
+++ b/navbar.html
@@ -46,7 +46,7 @@
                     <a class="nav-link titleText" href="External.html">External Links</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link titleText" href="https://alexandredecamargo.github.io/Math4Chem/intro.html">Teaching</a>
+                    <a class="nav-link titleText" href="Teaching.html">Teaching</a>
                 </li>
 
             </ul>
